--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="screen_not_locked_toggle">Screen not locked</string>
     <string name="screen_locked_toggle">Screen Locked</string>
     <string name="default_toggle">Default</string>
+    <string name="cd_character_image">Character image</string>
 </resources>
