--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="menu_screen_lock">Screen Lock</string>
     <string name="menu_linear_layout">Linear Layout</string>
     <string name="search_bar_label">Search</string>
+    <string name="delete_the_search_history_toggle">Delete the search history</string>
 </resources>
