Detail screen partially completed because I need to fetch location and origin data from REST call.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="search_bar_label">Search</string>
     <string name="delete_the_search_history_toggle">Delete the search history</string>
     <string name="cd_search_history_item">Search history item</string>
+    <string name="character_detail_status">Status: %1$s</string>
 </resources>
