TopBarLock implemented characterList and characterDetail screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="top_bar_not_locked_toggle">Top Bar not locked</string>
     <string name="spoiler_alert_active_toggle">Spoiler alert active</string>
     <string name="spoiler_alert_not_active_toggle">Spoiler alert not active</string>
+    <string name="clear_all_search_history_toggle">Clear search history</string>
 </resources>
