Tab Screen completed and LocationListScreen and CharacterListScreen moved to the Tabs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,7 @@
     <string name="spoiler_alert_active_toggle">Spoiler alert active</string>
     <string name="spoiler_alert_not_active_toggle">Spoiler alert not active</string>
     <string name="clear_all_search_history_toggle">Clear search history</string>
+    <string name="tab_characters">Characters</string>
+    <string name="tabs_locations">Locations</string>
 
 </resources>
