--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,6 @@
 <resources>
     <string name="app_name">Rick And Morty Wiki</string>
-    <string name="grid_layout_toggle">Grid Layout</string>
-    <string name="linear_layout_toggle">Linear Layout</string>
-    <string name="light_mode_toggle">Light Mode</string>
-    <string name="dark_mode_toggle">Dark Mode</string>
-    <string name="screen_not_locked_toggle">Screen not locked</string>
-    <string name="screen_locked_toggle">Screen Locked</string>
-    <string name="default_toggle">Default</string>
-    <string name="cd_character_image">Character image</string>
-    <string name="cd_navigate_back">Navigate back</string>
-    <string name="cd_dropdown_menu_open_close">Dropdown menu open/close.</string>
-    <string name="menu_night_mode">Night Mode</string>
-    <string name="menu_screen_lock">Screen Lock</string>
-    <string name="menu_linear_layout">Linear Layout</string>
     <string name="search_bar_label">Search</string>
-    <string name="delete_the_search_history_toggle">Delete the search history</string>
-    <string name="cd_search_history_item">Search history item</string>
     <string name="character_detail_status">Status: %1$s</string>
     <string name="location_name">Name</string>
     <string name="location_type">Type</string>
@@ -29,14 +14,46 @@
     <string name="character_properties_header">PROPERTIES</string>
     <string name="character_whereabouts_header">WHEREABOUTS</string>
     <string name="character_episodes_header">FEATURED CHAPTERS</string>
-    <string name="top_bar_locked_toggle">Top Bar Locked</string>
-    <string name="top_bar_not_locked_toggle">Top Bar not locked</string>
-    <string name="spoiler_alert_active_toggle">Spoiler alert active</string>
-    <string name="spoiler_alert_not_active_toggle">Spoiler alert not active</string>
-    <string name="clear_all_search_history_toggle">Clear search history</string>
     <string name="tab_characters">Characters</string>
     <string name="tabs_locations">Locations</string>
+
+    User Preferences
+    <string name="top_bar_locked_toggle">Top Bar Locked</string>
+    <string name="top_bar_not_locked_toggle">Top Bar not locked</string>
+    <string name="clear_all_search_history_toggle">Clear search history</string>
+    <string name="delete_the_search_history_toggle">Delete the search history</string>
+    <string name="grid_layout_toggle">Grid Layout</string>
+    <string name="linear_layout_toggle">Linear Layout</string>
+    <string name="light_mode_toggle">Light Mode</string>
+    <string name="dark_mode_toggle">Dark Mode</string>
+    <string name="screen_not_locked_toggle">Screen not locked</string>
+    <string name="screen_locked_toggle">Screen Locked</string>
+    <string name="default_toggle">Default</string>
+    <string name="menu_night_mode">Night Mode</string>
+    <string name="menu_screen_lock">Screen Lock</string>
+    <string name="menu_linear_layout">Linear Layout</string>
+
+    Error
+    <string name="error_email_app_not_found">No email app found.</string>
+    <string name="error_app_not_found">No app found.</string>
+
+    Content Descriptions
+    <string name="cd_copyright_section">Copyright</string>
     <string name="cd_scroll_to_top">Scroll to the top</string>
     <string name="cd_remove_all_query">Remove all query.</string>
+    <string name="cd_search_history_item">Search history item</string>
+    <string name="cd_character_image">Character image</string>
+    <string name="cd_navigate_back">Navigate back</string>
+    <string name="cd_dropdown_menu_open_close">Dropdown menu open/close.</string>
+
+    Copyright Section
+    <string name="copyright_part_first">"\t\t\tThis application is not an official app of "</string>
+    <string name="copyright_part_second">" or its creators. It is an independent project developed by wenubey and is not endorsed by or affiliated with "</string>
+    <string name="copyright_part_third">", or any related entities.\n\n\t\t\tAll images, characters, names, and related indicia are © and ™ of their respective owners. The use of any materials belonging to "</string>
+    <string name="copyright_part_fourth">" is for informational and educational purposes only, under the principles of fair use.\n\n\t\t\tRick and Morty is created by Justin Roiland and Dan Harmon.\n\n\t\t\tFor any inquiries or concerns regarding this application, please contact via"</string>
+    <string name="copyright_part_fifth">". \n\n\t\t\tAlso you can visit "</string>
+    <string name="copyright_part_sixth">"\'s play store account to check the other applications.\n\n"</string>
+    <string name="copyright_part_seventh">"\t\t\tCopyright © 2024 Rick and Morty Wikipedia Contributors. All rights reserved.\n"</string>
+    <string name="copyright_part_eighth">\t\t\tThank you for using the Rick and Morty Wikipedia app!</string>
 
 </resources>
