--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="character_episodes_header">CHAPTERS</string>
     <string name="tab_characters">Characters</string>
     <string name="tabs_locations">Locations</string>
+    <string name="episode_list_show_less">SHOW LESS</string>
+    <string name="episode_list_show_more">SHOW MORE</string>
+    <string name="residents_header">RESIDENTS</string>
+    <string name="location_detail_population">Population: %1$s</string>
 
     User Preferences
     <string name="top_bar_locked_toggle">Top Bar Locked</string>
@@ -33,6 +37,7 @@
     <string name="menu_screen_lock">Screen Lock</string>
     <string name="menu_linear_layout">Linear Layout</string>
     <string name="copyright_section">Copyright Section</string>
+    <string name="how_to_use_section">How to use?</string>
 
     Error
     <string name="error_email_app_not_found">No email app found.</string>
@@ -50,6 +55,7 @@
     <string name="cd_character_image">Character image</string>
     <string name="cd_navigate_back">Navigate back</string>
     <string name="cd_dropdown_menu_open_close">Dropdown menu open/close.</string>
+    <string name="cd_play_pause_button">Play/pause button.</string>
 
     Copyright Section
     <string name="copyright_header">Copyright ©</string>
@@ -61,10 +67,6 @@
     <string name="copyright_part_sixth">"\'s play store account to check the other applications.\n\n"</string>
     <string name="copyright_part_seventh">"Copyright © 2024 Rick and Morty Wikipedia Contributors. All rights reserved.\n"</string>
     <string name="copyright_part_eighth">Thank you for using the Rick and Morty Wikipedia app!</string>
-    <string name="episode_list_show_less">SHOW LESS</string>
-    <string name="episode_list_show_more">SHOW MORE</string>
-    <string name="residents_header">RESIDENTS</string>
-    <string name="location_detail_population">Population: %1$s</string>
 
 
 </resources>
