--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,16 +22,19 @@
     <string name="location_detail_population">Population: %1$s</string>
 
     User Preferences
-    <string name="top_bar_locked_toggle">Top Bar Locked</string>
-    <string name="top_bar_not_locked_toggle">Top Bar not locked</string>
+    <string name="top_bar_header">Top Bar Lock/Unlock</string>
+    <string name="top_bar_detail">This will change top bar behavior.</string>
+    <string name="grid_list_layout_header">Grid/List Layout</string>
+    <string name="grid_list_layout_detail">This will change to the character and location list behavior.</string>
+    <string name="night_light_header">Night/Light Mode</string>
+    <string name="night_light_detail">This will change to the application night/light mode behavior.</string>
+    <string name="screen_locked_header">Screen Lock/Unlock</string>
+    <string name="screen_locked_detail">This will change to the screen orientation lock behavior.</string>
+
+
+
     <string name="clear_all_search_history_toggle">Clear search history</string>
     <string name="delete_the_search_history_toggle">Delete the search history</string>
-    <string name="grid_layout_toggle">Grid Layout</string>
-    <string name="linear_layout_toggle">Linear Layout</string>
-    <string name="light_mode_toggle">Light Mode</string>
-    <string name="dark_mode_toggle">Dark Mode</string>
-    <string name="screen_not_locked_toggle">Screen not locked</string>
-    <string name="screen_locked_toggle">Screen Locked</string>
     <string name="default_toggle">Default</string>
     <string name="menu_night_mode">Night Mode</string>
     <string name="menu_screen_lock">Screen Lock</string>
@@ -67,6 +70,8 @@
     <string name="copyright_part_sixth">"\'s play store account to check the other applications.\n\n"</string>
     <string name="copyright_part_seventh">"Copyright © 2024 Rick and Morty Wikipedia Contributors. All rights reserved.\n"</string>
     <string name="copyright_part_eighth">Thank you for using the Rick and Morty Wikipedia app!</string>
+    <string name="tabs_settings">Settings</string>
+    <string name="label_fab_animation">FAB animation label</string>
 
 
 </resources>
