--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Rick And Morty Wiki</string>
     <string name="search_bar_label">Search</string>
-    <string name="character_detail_status">Status: %1$s</string>
     <string name="location_name">Name</string>
     <string name="location_type">Type</string>
     <string name="location_dimension">Dimension</string>
@@ -14,8 +13,6 @@
     <string name="character_properties_header">PROPERTIES</string>
     <string name="character_whereabouts_header">WHEREABOUTS</string>
     <string name="character_episodes_header">CHAPTERS</string>
-    <string name="episode_list_show_less">SHOW LESS</string>
-    <string name="episode_list_show_more">SHOW MORE</string>
     <string name="residents_header">RESIDENTS</string>
     <string name="location_detail_population">Population: %1$s</string>
 
@@ -37,19 +34,12 @@
     <string name="copyright_detail">You can navigate to copyright screen when clicked to button.</string>
     <string name="how_to_use_header">How to use?</string>
     <string name="how_to_use_detail">You can navigate to how to use screen when clicked to button.</string>
-    <string name="clear_all_search_history_toggle">Clear search history</string>
+    <string name="clear_all_search_header">Clear search history</string>
+    <string name="clear_all_search_detail">You can delete all search history when clicked to here.</string>
     <string name="delete_the_search_history_toggle">Delete the search history</string>
-    <string name="default_toggle">Default</string>
-    <string name="menu_night_mode">Night Mode</string>
-    <string name="menu_screen_lock">Screen Lock</string>
-    <string name="menu_linear_layout">Linear Layout</string>
 
     Error
-    <string name="error_email_app_not_found">No email app found.</string>
-    <string name="error_app_not_found">No app found.</string>
     <string name="error_screen_not_found">The screen you wanted was not found.</string>
-    <string name="error_location_is_null">This location was not found.</string>
-    <string name="error_character_is_null">This character was not found.</string>
     <string name="error_screen_state">There was an error downloading data.</string>
     <string name="error_unknown_field">UNKNOWN</string>
 
@@ -59,7 +49,6 @@
     <string name="cd_search_history_item">Search history item</string>
     <string name="cd_character_image">Character image</string>
     <string name="cd_navigate_back">Navigate back</string>
-    <string name="cd_dropdown_menu_open_close">Dropdown menu open/close.</string>
     <string name="cd_play_pause_button">Play/pause button.</string>
 
     Copyright Section
@@ -102,6 +91,9 @@
     <string name="annotation_tag_adult_swim">adult_swim</string>
     <string name="annotation_tag_email">email</string>
     <string name="annotation_tag_play_developer">play_developer</string>
+
+    Notification Constants
+    <string name="notification_search_history_clear">Your search history has been cleared.</string>
 
 
 </resources>
