CopyRight text made bigger for visibility and accessibility. Missing string resources added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,8 @@
 
     Error
     <string name="error_screen_not_found">The screen you wanted was not found.</string>
+    <string name="error_character_is_null">This character was not found.</string>
+    <string name="error_location_is_null">This location was not found.</string>
     <string name="error_screen_state">There was an error downloading data.</string>
     <string name="error_unknown_field">UNKNOWN</string>
 
