Application icon changed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="copyright_part_fourth">" is for informational and educational purposes only, under the principles of fair use.\n\nRick and Morty is created by Justin Roiland and Dan Harmon.For any inquiries or concerns regarding this application, please contact via"</string>
     <string name="copyright_part_fifth">".Also you can visit "</string>
     <string name="copyright_part_sixth">"\'s play store account to check the other applications.\n\n"</string>
-    <string name="copyright_part_seventh">"Copyright © 2024 Rick and Morty Wikipedia Contributors. All rights reserved.\n"</string>
+    <string name="copyright_part_seventh">"Copyright © 2024 wenubey. All rights reserved.\n"</string>
     <string name="copyright_part_eighth">Thank you for using the Rick and Morty Wikipedia app!</string>
     <string name="copyright_rick_and_morty">Rick And Morty</string>
     <string name="copyright_adult_swim">Adult Swim</string>
